# metal-gpu-learning

./: .gitignore  Cargo.toml  README.md
01-hello-gpu/: Cargo.toml  README.md
01-hello-gpu/src/: main.rs
02-double-values/: Cargo.toml  README.md
02-double-values/src/: main.rs
03-vector-add/: Cargo.toml  README.md
03-vector-add/src/: main.rs
04-parallel-sum/: Cargo.toml  README.md
04-parallel-sum/src/: main.rs
05-double-buffering/: Cargo.toml  README.md
05-double-buffering/src/: main.rs
06-market-tick-aggregation/: Cargo.toml  README.md
06-market-tick-aggregation/src/: lesson6.metal  main.rs
07-credit-card-fraud-detector/: 01-NOTES.md  Cargo.toml  README.md
07-credit-card-fraud-detector/src/: lesson7.metal  main.rs
08-basic-llm/: Cargo.toml  README.md
08-basic-llm/src/: lesson8.metal  main.rs
09-local-llm-training/: Cargo.toml  README.md  run_pipeline.sh
09-local-llm-training/data/: sample_corpus.txt
09-local-llm-training/src/: cpu_ref.rs  lesson9.metal  main.rs  model_json.rs
09-local-llm-training/trainer/: Cargo.toml
09-local-llm-training/trainer/src/: lib.rs  model.rs  tokenizer.rs
10-medicaid-provider-spending/: Cargo.toml  README.md  download_dataset.sh  run_fraud_pipeline.sh
10-medicaid-provider-spending/data/: fraud_raw_report.json  likely_fraud.csv  likely_fraud.json
10-medicaid-provider-spending/scripts/: combine_kernel_signals.py
10-medicaid-provider-spending/src/: lesson10.metal  main.rs
11-md5-brute-forcing/: Cargo.toml  NOTES.md  README.md
11-md5-brute-forcing/src/: lesson11.metal  main.rs
12-sha1-brute-forcing/: Cargo.toml  README.md
13-sha1-rust-kernel/: Cargo.toml  README.md
(+5 files in other folders)
