[workspace]
members = [
    "01-hello-gpu",
    "02-double-values",
    "03-vector-add",
    "04-parallel-sum",
    "05-double-buffering",
    "06-market-tick-aggregation",
    "07-credit-card-fraud-detector",
    "08-basic-llm",
    "09-local-llm-training",
    "09-local-llm-training/trainer",
    "10-medicaid-provider-spending",
    "11-md5-brute-forcing",
    "12-sha1-brute-forcing",
]
resolver = "2"
