[package]
name = "lesson9-trainer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
candle-core = { version = "0.9.2", features = ["metal"] }
candle-nn = { version = "0.9.2", features = ["metal"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

